new design for customize view

--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #711b64; }
+  background: #2894ca; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #36d5cf; }
+  background: #708238; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #3720be; }
+  background: #046fa7; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #9d3caf; }
+  background: #c78a56; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #c30d81; }
+  background: #24fe22; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #9ec2c6; }
+  background: #dafff7; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #7840a9; }
+  background: #530772; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #5dc755; }
+  background: #2d9429; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #734922; }
+  background: #8069e6; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #833b0e; }
+  background: #7ab5e0; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #3c230f; }
+  background: #778690; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #16079a; }
+  background: #f16b9a; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #a1af3c; }
+  background: #57858f; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #83d32c; }
+  background: #a38c50; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #213f91; }
+  background: #fd7657; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #5a1f66; }
+  background: #3fed84; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #a8fca9; }
+  background: #cfcda6; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #2a362a; }
+  background: #5ce5fa; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #12db0e; }
+  background: #0b9a39; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #9512eb; }
+  background: #d8a89c; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #76aa86; }
+  background: #888d62; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #b38449; }
+  background: #48c3cf; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #dac28d; }
+  background: #3fb6ef; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #16a458; }
+  background: #823099; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #8559ba; }
+  background: #40ccb8; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #55f1fd; }
+  background: #b2bcbd; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #22a4f2; }
+  background: #e5cf11; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #f66aee; }
+  background: #af2fea; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #d63518; }
+  background: #aec292; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #8df1b3; }
+  background: #6ce9dc; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2f36c9; }
+  background: #2ced1d; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #d2bea5; }
+  background: #3cdf1d; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #993cce; }
+  background: #616518; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #118898; }
+  background: #70e29a; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #84f146; }
+  background: #c7ca28; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #c48c34; }
+  background: #720fde; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #2b888a; }
+  background: #3e02a7; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #ef2318; }
+  background: #dfdc28; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #3f1ada; }
+  background: #ed3399; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #18f74a; }
+  background: #a594bb; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #9c5c7f; }
+  background: #feb33f; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #f38989; }
+  background: #df9612; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #7e50a4; }
+  background: #dce9c3; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #32eaba; }
+  background: #12c8dc; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #a9ae34; }
+  background: #519294; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #ed9ae3; }
+  background: #fcf5ed; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #614596; }
+  background: #015f4e; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #6b19d6; }
+  background: #16513d; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #c567b8; }
+  background: #b887ca; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #32ab51; }
+  background: #af825c; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #c20f40; }
+  background: #5d528b; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #2c8178; }
+  background: #33e94c; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #777c75; }
+  background: #b531ff; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #845969; }
+  background: #8112bb; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #9badaf; }
+  background: #85b818; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #9e4001; }
+  background: #d38582; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #75993a; }
+  background: #bb56df; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #cce673; }
+  background: #22dc6d; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #beebb0; }
+  background: #2bfe0b; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #801ab2; }
+  background: #2892fa; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #4d2c94; }
+  background: #18e6f9; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #9db13f; }
+  background: #e83357; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #487f4f; }
+  background: #abfae9; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #d265b1; }
+  background: #591842; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #4c8a30; }
+  background: #f0b7cf; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #551830; }
+  background: #699230; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #76bee2; }
+  background: #4085b7; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #2a6013; }
+  background: #c90c3b; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #5bcc4c; }
+  background: #c9976f; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #d91206; }
+  background: #de3366; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #94c362; }
+  background: #1827a6; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #705845; }
+  background: #c68480; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #f5e009; }
+  background: #ae558e; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #0d04e2; }
+  background: #8c6953; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #85e420; }
+  background: #d232e5; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #565a81; }
+  background: #e91775; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #6daf12; }
+  background: #c39230; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #344cfc; }
+  background: #bb5592; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #56025e; }
+  background: #324678; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #766b0d; }
+  background: #75ecb6; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #3d56dc; }
+  background: #a35ff4; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #5817b0; }
+  background: #01d480; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #b72039; }
+  background: #58af5b; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #c66b34; }
+  background: #d6dbe7; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #c82504; }
+  background: #70516c; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #91ea9e; }
+  background: #fd6f34; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #7a0b86; }
+  background: #7fabee; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #b0f04c; }
+  background: #ac29fa; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #e75b67; }
+  background: #ff83bc; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #bb0b5f; }
+  background: #e61054; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #12bc1a; }
+  background: #36564e; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #870ba4; }
+  background: #7fd784; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #9c1246; }
+  background: #dff5de; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #54d3a2; }
+  background: #168cef; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #862729; }
+  background: #1ee589; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #9027d1; }
+  background: #61ba24; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #ef111a; }
+  background: #f14ed8; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #c1a242; }
+  background: #1f83f5; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #6a58cc; }
+  background: #9c78cf; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #515548; }
+  background: #bafd26; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -12902,8 +12902,7 @@ table .parent-row,
     .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper {
       border: 1px solid #c4c4c4;
       padding: 20px;
-      width: 100%;
-      margin-right: 27px; }
+      width: 100%; }
       .list-view-hover-wrapper .content-wrapper .dropdowns-wrapper .dropdown-main-div {
         display: flex;
         justify-content: space-between; }
@@ -12912,31 +12911,16 @@ table .parent-row,
         justify-content: flex-end; }
     .list-view-hover-wrapper .content-wrapper .dropdown-container .dropdwon-contents-bottom .dropdown-connectors-list li {
       padding: 3px 8px;
-      margin-bottom: 5px; }
+      margin-bottom: 5px;
+      font-size: 14px; }
       .list-view-hover-wrapper .content-wrapper .dropdown-container .dropdwon-contents-bottom .dropdown-connectors-list li:hover {
         background: #f6f6f6 !important; }
     .list-view-hover-wrapper .content-wrapper .active-list {
       background: #f6f6f6 !important; }
-    .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper {
-      width: 100%; }
-      .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box {
-        border: 1px solid #c4c4c4;
-        padding: 20px;
-        max-width: 270px; }
-        .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box h3 {
-          font-weight: bold;
-          margin-bottom: 22px; }
-        .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box p input {
-          margin-right: 5px !important; }
-        .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box p label {
-          font-size: 14px;
-          margin-bottom: 27px; }
-        .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box .box-btn {
-          display: flex;
-          justify-content: flex-end; }
 
 .dropdown-div {
-  max-height: 358px; }
+  max-height: 358px;
+  width: 100%; }
 
 .dropdwon-top {
   display: flex;
@@ -12944,9 +12928,14 @@ table .parent-row,
   align-items: center;
   border: 1px solid #cdcdd6;
   cursor: pointer;
-  padding: 15px 12px;
-  min-width: 260px;
-  width: 100%; }
+  padding: 15px 12px; }
+
+.columns-order-title {
+  border-top: 0px solid #cdcdd6;
+  border-left: 0px solid #cdcdd6;
+  border-right: 0px solid #cdcdd6; }
+  .columns-order-title h3 {
+    font-weight: bold; }
 
 .dropdwon-contents-top {
   border: 1px solid #cdcdd6;
@@ -12983,69 +12972,51 @@ table .parent-row,
       width: 20px;
       height: 20px; }
 
+.move-arrow-div {
+  margin: 10px;
+  display: flex;
+  justify-content: center;
+  align-items: center; }
+  .move-arrow-div:last-child {
+    flex-direction: column; }
+    .move-arrow-div:last-child img {
+      margin: 10px 0px; }
+  .move-arrow-div img {
+    border: 1px solid #776FFF;
+    box-sizing: border-box;
+    border-radius: 4px;
+    padding: 5px; }
+
 .scroll-div-height {
   height: 190px;
   position: relative; }
 
-/* Customize the label (the container) */
-.container {
-  display: block;
-  position: relative;
-  padding-left: 25px;
-  margin-bottom: 27px;
-  cursor: pointer;
-  font-size: 14px;
-  -webkit-user-select: none;
-  -moz-user-select: none;
-  -ms-user-select: none;
-  user-select: none; }
+.view-boxs-wrapper {
+  width: 100%;
+  margin-top: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center; }
+  .view-boxs-wrapper .view-box {
+    border: 1px solid #c4c4c4;
+    padding: 20px;
+    width: 100%; }
+    .view-boxs-wrapper .view-box:first-child {
+      margin-right: 15px; }
+    .view-boxs-wrapper .view-box h3 {
+      font-weight: bold;
+      margin-bottom: 22px; }
+    .view-boxs-wrapper .view-box p input {
+      margin-right: 5px !important; }
+    .view-boxs-wrapper .view-box p label {
+      font-size: 14px;
+      margin-bottom: 27px; }
+    .view-boxs-wrapper .view-box .box-btn {
+      display: flex;
+      justify-content: flex-end; }
 
-/* Hide the browser's default radio button */
-.container input {
-  position: absolute;
-  opacity: 0;
-  cursor: pointer;
-  height: 0;
-  width: 0; }
-
-/* Create a custom radio button */
-.checkmark {
-  position: absolute;
-  top: -2px;
-  left: 0;
-  height: 18px;
-  width: 18px;
-  background-color: #fff;
-  border: 1px solid #a9b1b9;
-  border-radius: 50%; }
-
-/* On mouse-over, add a grey background color */
-.container:hover input ~ .checkmark {
-  background-color: #fff;
-  border: 1px solid #a9b1b9; }
-
-/* When the radio button is checked, add a blue background */
-.container input:checked ~ .checkmark {
-  background-color: #2196f3; }
-
-/* Create the indicator (the dot/circle - hidden when not checked) */
-.checkmark:after {
-  content: "";
-  position: absolute;
-  display: none; }
-
-/* Show the indicator (dot/circle) when checked */
-.container input:checked ~ .checkmark:after {
-  display: block; }
-
-/* Style the indicator (dot/circle) */
-.container .checkmark:after {
-  top: 5px;
-  left: 5px;
-  width: 6px;
-  height: 6px;
-  border-radius: 50%;
-  background: white; }
+.dropdown-connectors-list li {
+  font-size: 14px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
@@ -13333,7 +13304,16 @@ table .parent-row,
 
   .view-boxs-wrapper {
     width: 100%;
-    margin-top: 20px; }
+    margin-top: 20px;
+    flex-direction: column; }
+    .view-boxs-wrapper .view-box:first-child {
+      margin-right: 0px;
+      margin-bottom: 20px; }
+
+  .move-arrow-div:last-child {
+    flex-direction: row; }
+    .move-arrow-div:last-child a {
+      margin: 0px 10px; }
 
   .list-view-hover-wrapper .content-wrapper .view-boxs-wrapper .view-box {
     max-width: 100% !important; } }
