--- a/css/bootstrap.css
+++ b/css/bootstrap.css
@@ -8730,205 +8730,205 @@ th {
   visibility: hidden; }
 
 .child-row:nth-child(0) td:nth-child(2) .table-innerbox:after {
-  background: #2894ca; }
+  background: #86b8c1; }
 .child-row:nth-child(1) td:nth-child(2) .table-innerbox:after {
-  background: #708238; }
+  background: #740349; }
 .child-row:nth-child(2) td:nth-child(2) .table-innerbox:after {
-  background: #046fa7; }
+  background: #db3f3c; }
 .child-row:nth-child(3) td:nth-child(2) .table-innerbox:after {
-  background: #c78a56; }
+  background: #9ee811; }
 .child-row:nth-child(4) td:nth-child(2) .table-innerbox:after {
-  background: #24fe22; }
+  background: #5af633; }
 .child-row:nth-child(5) td:nth-child(2) .table-innerbox:after {
-  background: #dafff7; }
+  background: #9970cb; }
 .child-row:nth-child(6) td:nth-child(2) .table-innerbox:after {
-  background: #530772; }
+  background: #9e3a40; }
 .child-row:nth-child(7) td:nth-child(2) .table-innerbox:after {
-  background: #2d9429; }
+  background: #b017b0; }
 .child-row:nth-child(8) td:nth-child(2) .table-innerbox:after {
-  background: #8069e6; }
+  background: #ba2f9e; }
 .child-row:nth-child(9) td:nth-child(2) .table-innerbox:after {
-  background: #7ab5e0; }
+  background: #d85461; }
 .child-row:nth-child(10) td:nth-child(2) .table-innerbox:after {
-  background: #778690; }
+  background: #66fc49; }
 .child-row:nth-child(11) td:nth-child(2) .table-innerbox:after {
-  background: #f16b9a; }
+  background: #786948; }
 .child-row:nth-child(12) td:nth-child(2) .table-innerbox:after {
-  background: #57858f; }
+  background: #43a896; }
 .child-row:nth-child(13) td:nth-child(2) .table-innerbox:after {
-  background: #a38c50; }
+  background: #4202e3; }
 .child-row:nth-child(14) td:nth-child(2) .table-innerbox:after {
-  background: #fd7657; }
+  background: #95aa79; }
 .child-row:nth-child(15) td:nth-child(2) .table-innerbox:after {
-  background: #3fed84; }
+  background: #3d8bd6; }
 .child-row:nth-child(16) td:nth-child(2) .table-innerbox:after {
-  background: #cfcda6; }
+  background: #c789fd; }
 .child-row:nth-child(17) td:nth-child(2) .table-innerbox:after {
-  background: #5ce5fa; }
+  background: #2f3b02; }
 .child-row:nth-child(18) td:nth-child(2) .table-innerbox:after {
-  background: #0b9a39; }
+  background: #a8f684; }
 .child-row:nth-child(19) td:nth-child(2) .table-innerbox:after {
-  background: #d8a89c; }
+  background: #459f1e; }
 .child-row:nth-child(20) td:nth-child(2) .table-innerbox:after {
-  background: #888d62; }
+  background: #82c2bf; }
 .child-row:nth-child(21) td:nth-child(2) .table-innerbox:after {
-  background: #48c3cf; }
+  background: #3554a1; }
 .child-row:nth-child(22) td:nth-child(2) .table-innerbox:after {
-  background: #3fb6ef; }
+  background: #ae18d0; }
 .child-row:nth-child(23) td:nth-child(2) .table-innerbox:after {
-  background: #823099; }
+  background: #75c903; }
 .child-row:nth-child(24) td:nth-child(2) .table-innerbox:after {
-  background: #40ccb8; }
+  background: #f1afbd; }
 .child-row:nth-child(25) td:nth-child(2) .table-innerbox:after {
-  background: #b2bcbd; }
+  background: #4e6413; }
 .child-row:nth-child(26) td:nth-child(2) .table-innerbox:after {
-  background: #e5cf11; }
+  background: #a2e945; }
 .child-row:nth-child(27) td:nth-child(2) .table-innerbox:after {
-  background: #af2fea; }
+  background: #36b8f1; }
 .child-row:nth-child(28) td:nth-child(2) .table-innerbox:after {
-  background: #aec292; }
+  background: #90ea7b; }
 .child-row:nth-child(29) td:nth-child(2) .table-innerbox:after {
-  background: #6ce9dc; }
+  background: #e7b881; }
 .child-row:nth-child(30) td:nth-child(2) .table-innerbox:after {
-  background: #2ced1d; }
+  background: #b4efb8; }
 .child-row:nth-child(31) td:nth-child(2) .table-innerbox:after {
-  background: #3cdf1d; }
+  background: #733986; }
 .child-row:nth-child(32) td:nth-child(2) .table-innerbox:after {
-  background: #616518; }
+  background: #71dde7; }
 .child-row:nth-child(33) td:nth-child(2) .table-innerbox:after {
-  background: #70e29a; }
+  background: #f2eecd; }
 .child-row:nth-child(34) td:nth-child(2) .table-innerbox:after {
-  background: #c7ca28; }
+  background: #823248; }
 .child-row:nth-child(35) td:nth-child(2) .table-innerbox:after {
-  background: #720fde; }
+  background: #6d0a75; }
 .child-row:nth-child(36) td:nth-child(2) .table-innerbox:after {
-  background: #3e02a7; }
+  background: #d34856; }
 .child-row:nth-child(37) td:nth-child(2) .table-innerbox:after {
-  background: #dfdc28; }
+  background: #79c825; }
 .child-row:nth-child(38) td:nth-child(2) .table-innerbox:after {
-  background: #ed3399; }
+  background: #61b835; }
 .child-row:nth-child(39) td:nth-child(2) .table-innerbox:after {
-  background: #a594bb; }
+  background: #28e05b; }
 .child-row:nth-child(40) td:nth-child(2) .table-innerbox:after {
-  background: #feb33f; }
+  background: #65dfb0; }
 .child-row:nth-child(41) td:nth-child(2) .table-innerbox:after {
-  background: #df9612; }
+  background: #a295e8; }
 .child-row:nth-child(42) td:nth-child(2) .table-innerbox:after {
-  background: #dce9c3; }
+  background: #11afe0; }
 .child-row:nth-child(43) td:nth-child(2) .table-innerbox:after {
-  background: #12c8dc; }
+  background: #34d7b5; }
 .child-row:nth-child(44) td:nth-child(2) .table-innerbox:after {
-  background: #519294; }
+  background: #989d5a; }
 .child-row:nth-child(45) td:nth-child(2) .table-innerbox:after {
-  background: #fcf5ed; }
+  background: #b0c751; }
 .child-row:nth-child(46) td:nth-child(2) .table-innerbox:after {
-  background: #015f4e; }
+  background: #a4f9cc; }
 .child-row:nth-child(47) td:nth-child(2) .table-innerbox:after {
-  background: #16513d; }
+  background: #3adbdc; }
 .child-row:nth-child(48) td:nth-child(2) .table-innerbox:after {
-  background: #b887ca; }
+  background: #6cc2ae; }
 .child-row:nth-child(49) td:nth-child(2) .table-innerbox:after {
-  background: #af825c; }
+  background: #33ccbf; }
 .child-row:nth-child(50) td:nth-child(2) .table-innerbox:after {
-  background: #5d528b; }
+  background: #6f5629; }
 .child-row:nth-child(51) td:nth-child(2) .table-innerbox:after {
-  background: #33e94c; }
+  background: #886984; }
 .child-row:nth-child(52) td:nth-child(2) .table-innerbox:after {
-  background: #b531ff; }
+  background: #72d8f4; }
 .child-row:nth-child(53) td:nth-child(2) .table-innerbox:after {
-  background: #8112bb; }
+  background: #43f5b4; }
 .child-row:nth-child(54) td:nth-child(2) .table-innerbox:after {
-  background: #85b818; }
+  background: #4f8349; }
 .child-row:nth-child(55) td:nth-child(2) .table-innerbox:after {
-  background: #d38582; }
+  background: #809ff5; }
 .child-row:nth-child(56) td:nth-child(2) .table-innerbox:after {
-  background: #bb56df; }
+  background: #5323f5; }
 .child-row:nth-child(57) td:nth-child(2) .table-innerbox:after {
-  background: #22dc6d; }
+  background: #5abc18; }
 .child-row:nth-child(58) td:nth-child(2) .table-innerbox:after {
-  background: #2bfe0b; }
+  background: #09694c; }
 .child-row:nth-child(59) td:nth-child(2) .table-innerbox:after {
-  background: #2892fa; }
+  background: #0c86fa; }
 .child-row:nth-child(60) td:nth-child(2) .table-innerbox:after {
-  background: #18e6f9; }
+  background: #a559f0; }
 .child-row:nth-child(61) td:nth-child(2) .table-innerbox:after {
-  background: #e83357; }
+  background: #eb2a8b; }
 .child-row:nth-child(62) td:nth-child(2) .table-innerbox:after {
-  background: #abfae9; }
+  background: #e88217; }
 .child-row:nth-child(63) td:nth-child(2) .table-innerbox:after {
-  background: #591842; }
+  background: #a92830; }
 .child-row:nth-child(64) td:nth-child(2) .table-innerbox:after {
-  background: #f0b7cf; }
+  background: #01f833; }
 .child-row:nth-child(65) td:nth-child(2) .table-innerbox:after {
-  background: #699230; }
+  background: #08dd95; }
 .child-row:nth-child(66) td:nth-child(2) .table-innerbox:after {
-  background: #4085b7; }
+  background: #298ccf; }
 .child-row:nth-child(67) td:nth-child(2) .table-innerbox:after {
-  background: #c90c3b; }
+  background: #3284c2; }
 .child-row:nth-child(68) td:nth-child(2) .table-innerbox:after {
-  background: #c9976f; }
+  background: #8256eb; }
 .child-row:nth-child(69) td:nth-child(2) .table-innerbox:after {
-  background: #de3366; }
+  background: #9a540c; }
 .child-row:nth-child(70) td:nth-child(2) .table-innerbox:after {
-  background: #1827a6; }
+  background: #20c3cb; }
 .child-row:nth-child(71) td:nth-child(2) .table-innerbox:after {
-  background: #c68480; }
+  background: #86f80c; }
 .child-row:nth-child(72) td:nth-child(2) .table-innerbox:after {
-  background: #ae558e; }
+  background: #3494ed; }
 .child-row:nth-child(73) td:nth-child(2) .table-innerbox:after {
-  background: #8c6953; }
+  background: #0e1d3d; }
 .child-row:nth-child(74) td:nth-child(2) .table-innerbox:after {
-  background: #d232e5; }
+  background: #6afef0; }
 .child-row:nth-child(75) td:nth-child(2) .table-innerbox:after {
-  background: #e91775; }
+  background: #6dbdd6; }
 .child-row:nth-child(76) td:nth-child(2) .table-innerbox:after {
-  background: #c39230; }
+  background: #dbc6d3; }
 .child-row:nth-child(77) td:nth-child(2) .table-innerbox:after {
-  background: #bb5592; }
+  background: #feffef; }
 .child-row:nth-child(78) td:nth-child(2) .table-innerbox:after {
-  background: #324678; }
+  background: #f6a917; }
 .child-row:nth-child(79) td:nth-child(2) .table-innerbox:after {
-  background: #75ecb6; }
+  background: #275da3; }
 .child-row:nth-child(80) td:nth-child(2) .table-innerbox:after {
-  background: #a35ff4; }
+  background: #d5f24d; }
 .child-row:nth-child(81) td:nth-child(2) .table-innerbox:after {
-  background: #01d480; }
+  background: #d0c8fd; }
 .child-row:nth-child(82) td:nth-child(2) .table-innerbox:after {
-  background: #58af5b; }
+  background: #1152ab; }
 .child-row:nth-child(83) td:nth-child(2) .table-innerbox:after {
-  background: #d6dbe7; }
+  background: #513dd4; }
 .child-row:nth-child(84) td:nth-child(2) .table-innerbox:after {
-  background: #70516c; }
+  background: #ddfbe2; }
 .child-row:nth-child(85) td:nth-child(2) .table-innerbox:after {
-  background: #fd6f34; }
+  background: #5a6ad5; }
 .child-row:nth-child(86) td:nth-child(2) .table-innerbox:after {
-  background: #7fabee; }
+  background: #e14e69; }
 .child-row:nth-child(87) td:nth-child(2) .table-innerbox:after {
-  background: #ac29fa; }
+  background: #02a43e; }
 .child-row:nth-child(88) td:nth-child(2) .table-innerbox:after {
-  background: #ff83bc; }
+  background: #c51cc7; }
 .child-row:nth-child(89) td:nth-child(2) .table-innerbox:after {
-  background: #e61054; }
+  background: #700f2d; }
 .child-row:nth-child(90) td:nth-child(2) .table-innerbox:after {
-  background: #36564e; }
+  background: #090475; }
 .child-row:nth-child(91) td:nth-child(2) .table-innerbox:after {
-  background: #7fd784; }
+  background: #453a94; }
 .child-row:nth-child(92) td:nth-child(2) .table-innerbox:after {
-  background: #dff5de; }
+  background: #d1c3cd; }
 .child-row:nth-child(93) td:nth-child(2) .table-innerbox:after {
-  background: #168cef; }
+  background: #075851; }
 .child-row:nth-child(94) td:nth-child(2) .table-innerbox:after {
-  background: #1ee589; }
+  background: #fa1f35; }
 .child-row:nth-child(95) td:nth-child(2) .table-innerbox:after {
-  background: #61ba24; }
+  background: #06c748; }
 .child-row:nth-child(96) td:nth-child(2) .table-innerbox:after {
-  background: #f14ed8; }
+  background: #be4870; }
 .child-row:nth-child(97) td:nth-child(2) .table-innerbox:after {
-  background: #1f83f5; }
+  background: #04e32b; }
 .child-row:nth-child(98) td:nth-child(2) .table-innerbox:after {
-  background: #9c78cf; }
+  background: #2f6a9e; }
 .child-row:nth-child(99) td:nth-child(2) .table-innerbox:after {
-  background: #bafd26; }
+  background: #eb2b7e; }
 
 .child-row td:nth-child(2) .table-innerbox {
   position: relative; }
@@ -13017,6 +13017,15 @@ table .parent-row,
 
 .dropdown-connectors-list li {
   font-size: 14px; }
+
+.columns-order-div .dropdwon-contents-bottom .dropdown-connectors-list li {
+  padding: 3px 8px;
+  margin-bottom: 5px; }
+
+.columns-order-div .dropdwon-contents-bottom .dropdown-connectors-list li:hover {
+  background: #f6f6f6 !important;
+  padding: 3px 8px;
+  margin-bottom: 5px; }
 
 @media screen and (max-width: 767px) {
   .profile-box {
