--- a/scss/_fahad.scss
+++ b/scss/_fahad.scss
@@ -2791,3 +2791,14 @@ table .parent-row,
     font-size: 14px;
   }
 }
+
+.columns-order-div .dropdwon-contents-bottom .dropdown-connectors-list li {
+  padding: 3px 8px;
+  margin-bottom: 5px;
+}
+
+.columns-order-div .dropdwon-contents-bottom .dropdown-connectors-list li:hover {
+  background: #f6f6f6 !important;
+  padding: 3px 8px;
+  margin-bottom: 5px;
+}
